Socket/src/main/java/com/example/socket/error/ErrorResponse.java
package com.example.socket.error;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;

@Getter
@AllArgsConstructor
@Builder
public class ErrorResponse {
    private String message;
    private int status;
}
